--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./timer.js"></script>
+    <script defer src="./build/timer.js"></script>
     <link rel="stylesheet" href="./timer.css" />
   </head>
   <body>
-   <h2>Clock+ Timer Machine</h2>
+    <h2>Clock+ Timer Machine</h2>
     <div id="box" class="box">
-   
       <button onclick="start()" id="startbtn" class="startBtn">Start</button>
       <button onclick="stop()" id="stopBtn" class="stopBtn">Stop</button>
       <button onclick="reset()" id="resetBtn" class="resetBtn">Reset</button>
-     
-
     </div>
-    <button onclick="deleteAll()" id="deleteAll" class="deleteAll">Clear All</button>
+    <button onclick="deleteAll()" id="deleteAll" class="deleteAll">
+      Clear All
+    </button>
   </body>
 </html>
