--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./timer.css" />
   </head>
   <body>
+<img class="pic" src="timerimage.png" alt="">
     <h2>Clock+ Timer Machine</h2>
     <div id="box" class="box">
       <button onclick="start()" id="startbtn" class="startBtn">Start</button>
